# S.M.A.R.T_PySide

./: README.md  disc.txt  main.py  pyproject.toml  test.txt
src/disc/: widget.py
