[tool.poetry]
name = "micro"
version = "0.1.0"
description = ""
authors = ["ledxdeliveryflopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pycryptodome = "^3.20.0"
cryptography = "^42.0.8"
esptool = "^4.7.0"
docopt = "^0.6.2"
adafruit-ampy = "^1.1.0"
pyside6 = "^6.7.2"
psutil = "^6.0.0"
pyqtgraph = "^0.13.7"
pysmart = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
